--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,7 @@
   <title>Indy.chat</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="style.css" rel="stylesheet">
+  <link rel="icon" type="image/png" href="./favicon.png">
 </head>
 
 <body>
