Fix up styles, add link to room

--- a/www/index.html
+++ b/www/index.html
@@ -21,10 +21,15 @@
       independence. Come join us!</p>
 
     <form id="join">
-      <fieldset>
+
+      <div id="fields">
         <input type="email" placeholder="Enter email" required />
         <input type="submit" value="Join Slack" />
-      </fieldset>
+      </div>
+
+      <p id="existing"><a href="https://indyref.slack.com">
+        indyref.slack.com
+      </a></p>
 
       <p id="success" hidden="hidden">
         Success! Go check your email and you should
