--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,7 @@
 
       <p id="existing"><a href="https://indyref.slack.com">
         indyref.slack.com
-      </a></p>
+      </a> if you already have an account. <br />If you have problems with this form, email <a href="mailto://dale@arandomurl.com">dale@arandomurl.com</a> for an invite.</p>
 
       <p id="success" hidden="hidden">
         Success! Go check your email and you should
